# thallus-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs
src/identity/: mod.rs
src/mcp/: circuit_breaker.rs  client.rs  http.rs  mod.rs  pool.rs  stdio.rs
src/provider/: anthropic.rs  cache.rs  claude_cli.rs  mock.rs  mod.rs  openai.rs  pricing.rs  retry.rs
